--- a/123/index.html
+++ b/123/index.html
@@ -37,23 +37,26 @@
             </button>
         </div>
     </div>
-    </header>
+</header>
 <!-- header end -->
 
 <!-- Action start -->
 <section id="Action">
+    <iframe width="100%" height="500" src="https://www.youtube.com/embed/aoNHhTyaxJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div class="AllAction">
-        <div class="itemAction">
-                <span>Action</span>
-                <h1>Frontlines</h1>
-                <h3>Official Season 1 Trailer</h3>
-                <h6>Now Available on Streaming Services</h6>
+        <div class="infoAction">
+            <span>Action</span>
+            <h1>Frontlines</h1>
+            <h4>Official Season 1 Trailer</h3>
+            <h6>Now Available on Streaming Services</h6>
         </div>
-             
     </div>
-        <i class="fa fa-play"></i> 
-</div>
+        <div class="play-ico">
+            <i class="far fa-play-circle"></i> 
+        </div>
 </section>
+<div class="left-arrow"><i class="fas fa-chevron-left"></i> </div>
+<div class="right-arrow"><i class="fas fa-chevron-right"></i></div>
 <!-- Action end -->
 </body>
 </html>
